fixed media query to be more specific. also trying to fix default button behaviors on mobile

--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body {
 
   /* padding: 1rem; */
   min-height: 100vh;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 header {
@@ -249,7 +249,7 @@ input[type="checkbox"]:focus {
   width: 50px;
 }
 
-@media (hover: none) and (pointer: coarse) {
+@media (hover: none) and (pointer: coarse) and (max-width: 550px) {
   header {
     padding: 0.25rem 0.5rem;
   }
@@ -288,4 +288,3 @@ input[type="checkbox"]:focus {
     scale: 1.5;
   }
 }
-
